Intefaz 100%, Images Working

--- a/view/mainWindow.ui
+++ b/view/mainWindow.ui
@@ -1056,6 +1056,25 @@ font: 87 14pt &quot;Segoe UI Black&quot;;
       <string>Estado:</string>
      </property>
     </widget>
+    <widget class="QLabel" name="label">
+     <property name="geometry">
+      <rect>
+       <x>180</x>
+       <y>95</y>
+       <width>51</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="pixmap">
+      <pixmap resource="../images/zzz.qrc">:/zZZ/zzz.png</pixmap>
+     </property>
+     <property name="scaledContents">
+      <bool>true</bool>
+     </property>
+    </widget>
    </widget>
    <widget class="QGroupBox" name="groupBoxLast">
     <property name="geometry">
@@ -1159,6 +1178,25 @@ border-radius: 4px;</string>
       <string>Estado</string>
      </property>
     </widget>
+    <widget class="QLabel" name="label_26">
+     <property name="geometry">
+      <rect>
+       <x>170</x>
+       <y>100</y>
+       <width>41</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="pixmap">
+      <pixmap resource="../images/zzz.qrc">:/zZZ/zzz.png</pixmap>
+     </property>
+     <property name="scaledContents">
+      <bool>true</bool>
+     </property>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -1173,6 +1211,8 @@ border-radius: 4px;</string>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources/>
+ <resources>
+  <include location="../images/zzz.qrc"/>
+ </resources>
  <connections/>
 </ui>
