--- a/view/mainWindow.ui
+++ b/view/mainWindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>600</height>
+    <height>584</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -969,10 +969,10 @@ font: 87 14pt &quot;Segoe UI Black&quot;;
     <widget class="QLineEdit" name="textBox_StatusProductor">
      <property name="geometry">
       <rect>
-       <x>30</x>
-       <y>310</y>
-       <width>171</width>
-       <height>81</height>
+       <x>110</x>
+       <y>280</y>
+       <width>131</width>
+       <height>35</height>
       </rect>
      </property>
      <property name="minimumSize">
@@ -1043,9 +1043,9 @@ font: 87 14pt &quot;Segoe UI Black&quot;;
     <widget class="QLabel" name="label_StatusProductor">
      <property name="geometry">
       <rect>
-       <x>40</x>
+       <x>60</x>
        <y>290</y>
-       <width>51</width>
+       <width>41</width>
        <height>16</height>
       </rect>
      </property>
@@ -1056,7 +1056,7 @@ font: 87 14pt &quot;Segoe UI Black&quot;;
       <string>Estado:</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label">
+    <widget class="QLabel" name="labelZProductor">
      <property name="geometry">
       <rect>
        <x>180</x>
@@ -1069,19 +1069,113 @@ font: 87 14pt &quot;Segoe UI Black&quot;;
       <string/>
      </property>
      <property name="pixmap">
-      <pixmap resource="../images/zzz.qrc">:/zZZ/zzz.png</pixmap>
+      <pixmap>:/zZZ/zzz.png</pixmap>
      </property>
      <property name="scaledContents">
       <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_StatusProductor_2">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>330</y>
+       <width>101</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color:rgb(255, 255, 255);</string>
+     </property>
+     <property name="text">
+      <string>Tiempo Restante:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="textBox_StatusProductor_2">
+     <property name="geometry">
+      <rect>
+       <x>110</x>
+       <y>320</y>
+       <width>131</width>
+       <height>35</height>
+      </rect>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>60</width>
+       <height>35</height>
+      </size>
+     </property>
+     <property name="tabletTracking">
+      <bool>true</bool>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(52, 62, 64);
+color: rgb(255, 255, 255);
+border: 1px solid rgb(0, 153, 117);
+border-radius: 4px;</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_StatusProductor_4">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>370</y>
+       <width>81</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color:rgb(255, 255, 255);</string>
+     </property>
+     <property name="text">
+      <string>No. Productos:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="textBox_ProductosProductor">
+     <property name="geometry">
+      <rect>
+       <x>110</x>
+       <y>360</y>
+       <width>131</width>
+       <height>35</height>
+      </rect>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>60</width>
+       <height>35</height>
+      </size>
+     </property>
+     <property name="tabletTracking">
+      <bool>true</bool>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(52, 62, 64);
+color: rgb(255, 255, 255);
+border: 1px solid rgb(0, 153, 117);
+border-radius: 4px;</string>
+     </property>
+     <property name="text">
+      <string/>
      </property>
     </widget>
    </widget>
    <widget class="QGroupBox" name="groupBoxLast">
     <property name="geometry">
      <rect>
-      <x>570</x>
+      <x>550</x>
       <y>10</y>
-      <width>221</width>
+      <width>241</width>
       <height>531</height>
      </rect>
     </property>
@@ -1134,10 +1228,10 @@ font: 87 14pt &quot;Segoe UI Black&quot;;
     <widget class="QLineEdit" name="textBox_StatusConsumer">
      <property name="geometry">
       <rect>
-       <x>30</x>
-       <y>310</y>
-       <width>171</width>
-       <height>81</height>
+       <x>110</x>
+       <y>280</y>
+       <width>121</width>
+       <height>35</height>
       </rect>
      </property>
      <property name="minimumSize">
@@ -1165,9 +1259,9 @@ border-radius: 4px;</string>
     <widget class="QLabel" name="label_StatusConsumer">
      <property name="geometry">
       <rect>
-       <x>50</x>
+       <x>60</x>
        <y>290</y>
-       <width>51</width>
+       <width>41</width>
        <height>16</height>
       </rect>
      </property>
@@ -1175,10 +1269,10 @@ border-radius: 4px;</string>
       <string notr="true">color:rgb(255, 255, 255);</string>
      </property>
      <property name="text">
-      <string>Estado</string>
+      <string>Estado:</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_26">
+    <widget class="QLabel" name="label_ZConsumidor">
      <property name="geometry">
       <rect>
        <x>170</x>
@@ -1191,10 +1285,104 @@ border-radius: 4px;</string>
       <string/>
      </property>
      <property name="pixmap">
-      <pixmap resource="../images/zzz.qrc">:/zZZ/zzz.png</pixmap>
+      <pixmap>:/zZZ/zzz.png</pixmap>
      </property>
      <property name="scaledContents">
       <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_StatusProductor_3">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>330</y>
+       <width>101</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color:rgb(255, 255, 255);</string>
+     </property>
+     <property name="text">
+      <string>Tiempo Restante:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="textBox_TiempoConsumidor">
+     <property name="geometry">
+      <rect>
+       <x>110</x>
+       <y>320</y>
+       <width>121</width>
+       <height>35</height>
+      </rect>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>60</width>
+       <height>35</height>
+      </size>
+     </property>
+     <property name="tabletTracking">
+      <bool>true</bool>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(52, 62, 64);
+color: rgb(255, 255, 255);
+border: 1px solid rgb(0, 153, 117);
+border-radius: 4px;</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_StatusProductor_5">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>370</y>
+       <width>81</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color:rgb(255, 255, 255);</string>
+     </property>
+     <property name="text">
+      <string>No. Productos:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="textBox_TiempoConsumidor_2">
+     <property name="geometry">
+      <rect>
+       <x>110</x>
+       <y>360</y>
+       <width>121</width>
+       <height>35</height>
+      </rect>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>60</width>
+       <height>35</height>
+      </size>
+     </property>
+     <property name="tabletTracking">
+      <bool>true</bool>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(52, 62, 64);
+color: rgb(255, 255, 255);
+border: 1px solid rgb(0, 153, 117);
+border-radius: 4px;</string>
+     </property>
+     <property name="text">
+      <string/>
      </property>
     </widget>
    </widget>
